syntax = "proto3";

package proto;
import "google/protobuf/any.proto";
option go_package = "./proto";

service Engine {
  // Initializes the engine with the provided request parameters.
  // Returns a stream of InitResponse messages.
  rpc Init(InitRequest) returns (stream InitResponse);

  // Runs a command with the provided request parameters.
  // Returns a stream of RunResponse messages.
  rpc Run(RunRequest) returns (stream RunResponse);

  // Shuts down the engine with the provided request parameters.
  // Returns a stream of ShutdownResponse messages.
  rpc Shutdown(ShutdownRequest) returns (stream ShutdownResponse);
}

message InitRequest {
  // Metadata information as a map of string keys to protobuf Any values.
  map<string, google.protobuf.Any> meta = 1;

  // Working directory path.
  string working_dir = 2;

  // Environment variables as a map of string keys to string values.
  map<string, string> env_vars = 3;
}

message InitResponse {
  oneof response {
    InitResponseLog log = 1;
    InitResponseStdWrite std_write = 2;
    InitResponseResult result = 3;
  }
}

message InitResponseLog {
  string level = 1;
  string message = 2;
}

message InitResponseStdWrite {
  oneof response {
    string stdout = 1;
    string stderr = 2;
  }
}

message InitResponseResult {
  oneof result {
    InitResponseSuccess success = 1;
    InitResponseError error = 2;
  }
}

message InitResponseSuccess {}

message InitResponseError {
  string message = 1;
}

message ShutdownRequest {
  // Metadata information as a map of string keys to protobuf Any values.
  map<string, google.protobuf.Any> meta = 1;

  // Working directory path.
  string working_dir = 2;

  // Environment variables as a map of string keys to string values.
  map<string, string> env_vars = 3;
}

message ShutdownResponse {
  oneof response {
    ShutdownResponseLog log = 1;
    ShutdownResponseResult result = 2;
  }
}

message ShutdownResponseLog {
  string level = 1;
  string message = 2;
}

message ShutdownResponseResult {
  oneof result {
    ShutdownResponseSuccess success = 1;
    ShutdownResponseError error = 2;
  }
}

message ShutdownResponseSuccess {}

message ShutdownResponseError {
  string message = 1;
}

message RunRequest {
  // Metadata information as a map of string keys to protobuf Any values.
  map<string, google.protobuf.Any> meta = 1;

  // Working directory path.
  string working_dir = 2;

  // Command to be executed.
  string command = 3;

  // Arguments for the command.
  repeated string args = 4;

  // Flag indicating if a pseudo-terminal should be allocated.
  bool allocate_pseudo_tty = 5;

  // Environment variables as a map of string keys to string values.
  map<string, string> env_vars = 6;
}

message RunResponse {
  oneof response {
    RunResponseResult result = 3;
    RunResponseLog log = 4;
    RunResponseStdWrite std_write = 5;
  }
}

message RunResponseLog {
  string level = 1;
  string message = 2;
}

message RunResponseStdWrite {
  oneof response {
    string stdout = 1;
    string stderr = 2;
  }
}

message RunResponseResult {
  oneof result {
    RunResponseSuccess success = 1;
    RunResponseError error = 2;
  }
}

message RunResponseSuccess {
  int32 result_code = 1;
}

message RunResponseError {
  string message = 1;
}
